--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "formik": "^2.4.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-hot": "^0.0.1",
     "react-icons": "^4.11.0",
