--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-hot": "^0.0.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "toast": "^0.5.4",
