--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "firebase": "^10.12.2",
     "formik": "^2.4.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-hot": "^0.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "toast": "^0.5.4",
     "yup": "^1.3.2"
